--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <!--
-      Need a visual blank slate?
+      Need a visual blank slate?i
       Remove all code in `styles.css`!
     -->
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
   <body>
-    h1
+    <h1>Get Baked</h1>
+    <div class="cake-container">
+      <div class="cake">
+        <div class="cake-img">
+
+        </div>
+       <div class="cake-data">
+         <span class="name"></span>
+         <span class="price"></span>
+       </div>
+      </div>
+    </div>
   </body>
 </html>
