--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <script type="module" src="script.js"></script>
   <body>
     <h1>Get Baked</h1>
-    <div id="cake-holder" class="cake-holder">
-  
-  </div>
+    <select name="languages" id="cake-type">
+      <option value="chocolate">Chocolate Cake</option>
+      <option value="fruit">Fruit Cake</option>
+      <option value="spices">Spices cake</option>
+      <option value="sponge">Sponge cake</option>
+      <option value="nuts">nut cake</option>
+    
+    </select>
+    <div id="cake-holder" class="cake-holder"></div>
     
     </div>
   </body>
