--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <h1>Get Baked</h1>
     <select name="languages" id="cake-type">
+      <option value="all">All</option>
       <option value="chocolate">Chocolate Cake</option>
       <option value="fruit">Fruit Cake</option>
       <option value="spices">Spices cake</option>
